...
    return ShadMenubar(
      items: [
        ShadMenubarItem(
          items: [
            const ShadContextMenuItem(
              leading: Icon(LucideIcons.file),
              child: Text('New Document'),
            ),
            const ShadContextMenuItem(
              leading: Icon(LucideIcons.folder),
              child: Text('Open Document'),
            ),
            ShadSeparator.horizontal(),
...
